--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥪</text></svg>"
     />
     <meta name="viewport" content="width=1024" />
-    <title>#HUMAN</title>
+    <title>Balanced Bites</title>
   </head>
   <body>
     <div id="root"></div>
